--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,9 @@ services:
       dockerfile: Dockerfile
     volumes:
       - './src:/app'
-      - '/app/node_modules'
+      - 'node_modules:/app/node_modules'
     ports:
-      - 8030:3100
-      - 35729:35729
+      - 8030:8030
     environment:
       - CHOKIDAR_USEPOLLING=true
 
@@ -22,8 +21,11 @@ services:
       dockerfile: rekit.Dockerfile
     volumes:
       - './src:/app'
-      - '/app/node_modules'
+      - 'node_modules:/app/node_modules'
     ports:
-      - 8031:3040
+      - 8031:8031
     environment:
       - CHOKIDAR_USEPOLLING=true  
+
+volumes:
+  node_modules:
